fixes #78, adding whitespace to questions heading and fixes margin on tablet

--- a/public/style.css
+++ b/public/style.css
@@ -57,6 +57,7 @@ h3 {
 .questions-heading {
   text-transform: uppercase;
   color: #EA5C37;
+  margin-bottom: 1em;
 
 }
 
